--- a/style.css
+++ b/style.css
@@ -349,6 +349,7 @@ div form button {
 @media (max-width: 500px) {
   .nav_bar div a {
     padding: 0;
+    font-size: 0.75rem;
   }
 }
 @media (max-width: 1084px) {
